WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283494
Implementation bug for popover-inside-invoker fix
https://bugs.webkit.org/show_bug.cgi?id=283494
Summary
Implementation bug for popover-inside-invoker fix
Mason Freed
Reported
2024-11-21 09:27:56 PST
This is an implementation bug for this spec PR:
https://github.com/whatwg/html/pull/10770
It fixes a corner case issue with the behavior of a popover nested inside the invoker for that popover.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2024-11-27 11:01:20 PST
This change needs porting to WebKit:
https://chromium-review.googlesource.com/c/chromium/src/+/6026982/6/third_party/blink/renderer/core/html/forms/html_form_control_element.cc
Here's the equivalent code in WebKit:
https://searchfox.org/wubkat/rev/795fdaece398b18bdefcd3954e0da2312ca92ee9/Source/WebCore/html/HTMLFormControlElement.cpp#397-416
Tim Nguyen (:ntim)
Comment 2
2024-11-27 11:03:01 PST
`HTMLFormControlElement::handlePopoverTargetAction` will probably need to pass in an event target as parameter.
Radar WebKit Bug Importer
Comment 3
2024-11-28 09:28:11 PST
<
rdar://problem/140664494
>
Luke Warlow
Comment 4
2024-12-07 04:18:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37592
EWS
Comment 5
2024-12-08 14:34:11 PST
Committed
287522@main
(8a02dacf8e5b): <
https://commits.webkit.org/287522@main
> Reviewed commits have been landed. Closing PR #37592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug