Implement new popover inside invoker behaviour https://bugs.webkit.org/show_bug.cgi?id=283494

Reviewed by Tim Nguyen.

This patch matches the new spec behaviour for when a popover is inside its invoker.

See https://github.com/whatwg/html/pull/10770

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-nested-in-button-expected.txt:
* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::defaultEventHandler):
* Source/WebCore/html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::handlePopoverTargetAction const):
* Source/WebCore/html/HTMLFormControlElement.h:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/287522@main